--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -1,9 +1,234 @@
-html {
-  box-sizing: border-box;
-  font-size: 16px;
-  background-color: lime;
+* {
+	margin: 0px;
+	padding: 0px;
+	font-family: 'Inter', sans-serif;
 }
 
-*, *:before, *:after {
-  box-sizing: inherit;
+body {
+	background-color: #F1EAC5;
+}
+
+.container {
+	width: 100vw;
+	height: 100vh;
+	display: grid;
+	grid-template-columns: repeat(21, 1fr);
+	column-gap: 20px;
+	grid-template-rows: repeat(12, 1fr);
+}
+
+select::-ms-expand {
+	display: none;
+}
+
+select {
+	width: 100%;
+	font-size: 20px;
+	padding: 5px;
+	border: 2px solid #143399;
+	height: 50px;
+	-moz-appearance: none;
+	-webkit-appearance: none;
+	appearance: none;
+	background: #F1EAC5;
+	color: #143399;
+	outline: none;
+	position: relative;
+	cursor: pointer;
+}
+
+.container-select {
+	grid-column: 4/12;
+	grid-row: 2/3;
+}
+
+.diskenter {
+	grid-column: 4/12;
+	grid-row: 6/8;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.databutton {
+	grid-column: 4/12;
+	grid-row: 3/4;
+	display: flex;
+	justify-content: space-around;
+}
+
+.cadre-anecdote {
+	background-color: white;
+	grid-column: 14/20;
+	grid-row: 2/5;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: #143399;
+	font-size: 16px;
+	text-align: center;
+	padding: 20px;
+}
+
+.anecdote__mep {
+	font-size: 84px;
+}
+
+.anecdote__mep--left {
+	transform: rotateY(180deg);
+	align-self: flex-start;
+	justify-self: flex-start;
+}
+
+.anecdote__mep--right {
+	transform: rotateX(180deg);
+	align-self: flex-end;
+	justify-self: flex-end;
+}
+
+.anecdote__mep--right {
+	transform: rotateX(180deg);
+}
+
+.data-container {
+	grid-column: 14/20;
+	grid-row: 6/12;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: space-between;
+	flex-direction: column;
+}
+
+.title {
+	font-weight: 300;
+	color: #143399;
+	font-size: 20px;
+	margin-top: 20px;
+}
+
+.data-text {
+	font-size: 63px;
+	font-weight: bolder;
+	color: #143399;
+}
+
+.button {
+	height: 45px;
+	padding: 0px 30px;
+	background-color: white;
+	border-radius: 5px;
+	border: none;
+	color: #143399;
+	text-align: center;
+	font-size: 20px;
+}
+
+.audio-timer {
+	grid-column: 5/11;
+	grid-row: 9/11;
+	width: 100%;
+}
+
+audio {
+	width: 100%;
+}
+
+.display_none {
+	display: none;
+}
+
+.infos {
+	grid-column: 2/20;
+	grid-row: 12;
+	color: #143399;
+	font-size: 20px;
+	display: flex;
+	align-items: flex-end;
+	margin-bottom: 20px;
+}
+
+.dir_infos {
+	color: #143399;
+}
+
+.dir_infos:hover {
+	color: rgb(34, 56, 255);
+}
+
+.musique__progressbar {
+	grid-column: 5/11;
+	grid-row: 9/10;
+	width: 100%;
+	height: 4px;
+	background: #143399;
+	display: flex;
+	align-items: center;
+	align-self: flex-end;
+}
+
+.musique__progress {
+	height: 15px;
+	width: 15px;
+	background-color: #143399;
+	border-radius: 100%;
+}
+
+.musique__controle {
+	margin: 36px 0 54px 0;
+	color: red;
+	grid-column: 4/12;
+	grid-row: 10/11;
+	align-self: center;
+	justify-self: center;
+}
+
+.musique__play {
+	width: 50px;
+	height: 50px;
+	border-radius: 100%;
+	background-color: transparent;
+	border: solid 2px #143399;
+	outline: 0;
+	cursor: pointer;
+	background-image: url(../images/play.svg);
+	background-repeat: no-repeat;
+	background-size: 40%;
+	background-position: 60% center;
+}
+
+.musique__play--pause {
+	background-image: url(../images/pause.svg);
+	background-repeat: no-repeat;
+	background-size: 40%;
+	background-position: center center;
+}
+
+.statut--off {
+	color: #ca2e55;
+}
+
+.statut--on {
+	color: #629460;
+}
+
+.vis_hidden {
+	visibility: hidden;
+}
+
+.anim {
+	animation-name: rotate;
+	animation-duration: 10s;
+	animation-timing-function: linear;
+	animation-iteration-count: infinite;
+}
+
+@keyframes rotate {
+	to {
+		transform: rotate(1800deg);
+	}
+}
+
+.paused {
+	animation-play-state: paused;
 }
